# AvtoS

./: AutoParts.spec  README.md  build.py  build.spec  fix_qt_platform.py  pyproject.toml  qt_hook.py  requirements.txt  test_settings.py
.github/workflows/: ci.yml
docs/: IMPROVEMENTS.md  SETTINGS_GUIDE.md  STAGE5_SUMMARY.md  STAGE6_SUMMARY.md
resources/: styles.qrc
resources/styles/: buttons.qss  forms.qss  main.qss  tables.qss  tabs.qss
scripts/: compile_resources.py  lint.bat  lint.py  migrate_db.py
src/: database.py  database_simple.py  enhanced_widgets.py  full_app.py  icon_loader.py  modern_widgets.py  parts_dialogs.py  resources_rc.py  settings_dialog.py  settings_manager.py  simple_icon_loader.py  style_loader.py  styles.py  styles_enhanced.py  ui_utils.py
src/gui/: __init__.py  main_window.py  parts_widget.py  reports_widget.py  sales_widget.py
src/models/: __init__.py  database.py  part.py  sale.py
src/services/: __init__.py  backup_service.py  part_service.py  sale_service.py
tests/: __init__.py  conftest.py  test_database_simple.py  test_database_simple_only.py  test_models.py  test_services.py
