[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoparts"
version = "1.0.0"
description = "Система учёта автозапчастей"
authors = [
    {name = "AutoParts Team"}
]
dependencies = [
    "PySide6==6.6.1",
    "peewee==3.17.0",
    "PyInstaller==6.3.0",
    "typing-extensions==4.8.0"
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-qt==4.2.0",
    "mypy==1.7.1",
    "ruff==0.1.6",
    "black==23.11.0",
    "types-setuptools==68.2.0.2"
]

# Настройки Ruff (линтер + форматтер)
[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"src/models/*.py" = ["F401"]  # unused imports in models

# Настройки Black (форматтер)
[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# Настройки MyPy (проверка типов)
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Пока отключено для legacy кода
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "peewee.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "PySide6.*"
ignore_missing_imports = true

# Настройки pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short" 